<resources>
    <string name="app_name">SportKeep</string>
    <string name="facebook_app_id">1431246966946091</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1431246966946091</string>
    <string name="cancel_login">El logueo fue cancelado</string>
    <string name="error_login">Error en la aplicación</string>
    <string name="firebase_error_login">Error en el logueo de firebase</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_publicaciones">Publicaciones</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_publicar">Publicar</string>
    <string name="menu_notificaciones">Notificaciones</string>
    <string name="menu_canchas">Canchas</string>
    <string name="menu_campeonatos">Campeonatos</string>
    <string name="menu_entrenamientos">Entrenamientos</string>
    <string name="menu_entrenamiento">Entrenamiento</string>
    <string name="menu_anuncios">Anuncios</string>
    <string name="menu_agregar">Agregar</string>
    <string name="menu_reportes">Reportes</string>
    <string name="menu_buscar">Buscar</string>
    <string name="menu_anunciar">Anunciar</string>
    <string name="menu_misanuncios">Mis anuncios</string>
    <string name="menu_cerrarsesion">Cerrar sesión</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="a">a</string>
    <string name="cargando">Cargando&#8230;</string>
    <string name="avatar">Avatar</string>
    <string name="cancha">Cancha</string>
    <string name="barrio">Barrio</string>
    <string name="direccion">Dirección</string>
    <string name="comuna">Comuna</string>
    <string name="iluminacion">Iluminación</string>
    <string name="dominio">Dominio</string>
    <string name="material">Material</string>
    <string name="estado_cancha">Estado</string>
    <string name="ubicacion">Ubicación</string>
    <string name="entrenamientos">Entrenamientos</string>
    <string name="reportar_cancha">Reportar cancha</string>
    <string name="sin_registros">Sin registros</string>
    <string name="content_ubicacion">ubicacion</string>
    <string name="publicado_por">Públicado por</string>
    <string name="dia">Día(s)</string>
    <string name="horario">Horario</string>
    <string name="entrenador">Entrenador</string>
    <string name="contacto">Contacto</string>
    <string name="descripcion">Descripción</string>
    <string name="detalles_cancha">Detalles de la cancha</string>
    <string name="comentarios">Comentarios</string>
    <string name="deja_comentario">Deja tu comentario</string>
    <string name="comentar">Comentar</string>
    <string name="usuario">Usuario</string>
    <string name="deporte">Deporte</string>
    <string name="pais">Pais</string>
    <string name="estado">Estado</string>
    <string name="ciudad">Ciudad</string>
    <string name="subir_imagen">Subir imagen</string>
    <string name="enviar">Enviar</string>
    <string name="escribe_barrio">Escribe el barrio completo sin tildes</string>
    <string name="anuncio">Anuncio: </string>
    <string name="hora_inicial">Hora inicial</string>
    <string name="hora_final">Hora final</string>
    <string name="nombre_apellido">Nombre(s) y apellido(s) del entrenador</string>
    <string name="numero">Número de celular o telefono</string>
    <string name="descripcion_entrenamiento">Describe por ejemplo las categorías y los precios</string>
    <string name="resultados">Resultados</string>
    <string name="escribe_deporte">Escribe el deporte completo sin tildes</string>
    <string name="tipo">Tipo</string>
    <string name="descripcion_publicacion">Escribe lo que quieres que todos vean como descripción</string>
    <string name="fecha">Fecha: </string>
    <string name="futbol">Fútbol</string>
    <string name="microfutbol">Microfútbol</string>
    <string name="baloncesto">Baloncesto</string>
    <string name="futsal">Futsal</string>
    <string name="voleivol">Voleibol</string>
    <string name="futbol_mini">Fútbol Mini</string>
    <string name="patinaje">Patinaje</string>
    <string name="tenis">Tenis</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miercoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sabado</string>
    <string name="no_entrenamientos">Usted no ha publicado entrenamientos.</string>
    <string name="domingo">Domingo</string>
    <string name="sin_resultados">Sin resultados.</string>
    <string name="no_notificaciones">No tienes notificaciones.</string>
    <string name="no_publicaciones">No hay publicaciones en tu ciudad, si no hay canchas registradas, puedes registrar las de tu ciudad en el apartado de canchas.</string>
    <string name="no_canchas">No hay canchas en tu ciudad, para agregarlas, ve al apartado de canchas y luego agregar.</string>
    <string name="automatica">Automática</string>
    <string name="manual">Manual</string>
    <string name="sin_ilu">Sin iluminación</string>
    <string name="rellena_cancha">Rellena los datos y sube la imagen de la cancha para enviar</string>
    <string name="espere">Por favor, espere&#8230;</string>
    <string name="funcionando">Funcionando</string>
    <string name="mantenimiento">En mantenimiento</string>
    <string name="publico">Público</string>
    <string name="privado">Privado</string>
    <string name="cancha_enviada">¡La cancha fue enviada a revisión!</string>
    <string name="imagen_aviso">La imagen no puede pasar 1 MB</string>
    <string name="subiendo_imagen">Subiendo imagen</string>
    <string name="selecciona_imagen">Selecciona la imagen de la cancha</string>
    <string name="notificacion">Notificación</string>
    <string name="selecciona_barrio">Selecciona un barrio</string>
    <string name="no_7_dias">No puedes pasar los 7 días</string>
    <string name="no_repetir_dias">No puedes repetir los días</string>
    <string name="rellena_entrenamiento">Rellena todos los datos para públicar el entrenamiento</string>
    <string name="cancha_seleccionada">Cancha seleccionada</string>
    <string name="ip_bloqueada">Tu IP ha sido bloqueada por el administrador por incumplimiento de las normas</string>
    <string name="publicacion">Publicación</string>
    <string name="campeonato">Campeonato</string>
    <string name="rellena_publicacion">Escribe una descripción y/o selecciona una cancha para públicar</string>
    <string name="correo_no_registrado">Correo no registrado</string>
    <string name="deporte_aqui">Escribe tu reporte aquí</string>
    <string name="detalles_reporte">Detalles del reporte</string>
    <string name="cancelar">Cancelar</string>
    <string name="reporte_enviado">¡El reporte fue enviado al administrador!</string>
    <string name="escribe_reporte">Escribe tu reporte aquí</string>
    <string name="reportar_a">Reportar a</string>
    <string name="detalles_entrenamiento">Detalles del entrenamiento</string>
    <string name="ha_comentado">¡Ha comentado tu entrenamiento de</string>
    <string name="usuario2">usuario</string>
    <string name="comentado_publicacion">¡Ha comentado tu publicación de</string>
    <string name="publicado_campeonato">¡Ha comentado tu campeonato de</string>
    <string name="comentado_campeonato">¡Ha comentado tu campeonato de</string>
    <string name="respondido_comentario">¡Ha respondido a tu comentario!</string>
    <string name="detalles_publicacion">Detalles de la publicación</string>
    <string name="google_sign_up">Continuar con Google</string>
    <string name="no_caracteres">No puedes pasar los 500 caracteres</string>
    <string name="entrenamiento_de">"Entrenamiento de "</string>
    <string name="entrenamiento_eliminado">¡Entrenamiento eliminado!</string>
    <string name="eliminar_ent">Eliminar entrenamiento</string>
    <string name="seguro_ent">¿Seguro que desea eliminar el entrenamiento?</string>
    <string name="texto_agregar">LLena los campos y sube una imagen horizontal que no pase 1 MB de peso, si pones la cancha como dominio privado, será sólo visible en el apartado de canchas. Después de enviar la cancha, el administrador determinará los datos para posteriormente agregarla. Si la cancha es aceptada, se le hará saber al usuario con una notificación.</string>
    <string name="nota_agregar">Nota: Recuerde escribir el estado y la ciudad tal como aparecen debajo de su correo electrónico.</string>
    <string name="continuar">Continuar</string>
    <string name="activar_ubicacion">Activa tu ubicación</string>
    <string name="al_ingresar">*Al ingresar aceptas nuestras:</string>
    <string name="condiciones">Condiciones de uso</string>
    <string name="politica">Política de privacidad</string>
    <string name="acuerdo_usuario">Acuerdo con el usuario</string>
    <string name="condiciones1">Después de ingresar en SportKeep a través de Facebook o Google aceptas los términos del siguiente acuerdo.</string>
    <string name="condiciones2">SportKeep ofrece un entorno que permite a todos sus miembros hacer publicaciones sin ningún tipo de discriminación por motivos de sexo, edad, nacionalidad o religión</string>
    <string name="condiciones3">Te recordamos que está expresamente prohibido:</string>
    <string name="condiciones4">-Crear múltiples publicaciones de cualquier tipo: publicación, entrenamiento o campeonato, teniendo el mismo contenido de forma repetitiva.</string>
    <string name="condiciones5">-Se entiende que se prohíbe expresamente insultar a otros usuarios o realizar comentarios racistas.</string>
    <string name="condiciones6">-Molestar a otros usuarios con repetidos comentarios.</string>
    <string name="condiciones7">-Utilizar SportKeep con propósitos comerciales o para anunciar otra empresa.</string>
    <string name="condiciones8">Respecto a los artículos disponibles en esta app, se prohíbe expresamente:</string>
    <string name="condiciones9">-La reproducción, incluso parcial, de cualquier artículo sin autorización por escrito de SportKeep.</string>
    <string name="condiciones10">-Difundir los contenidos de cualquier artículo. Estos artículos son para uso exclusivo y personal de los miembros registrados.</string>
    <string name="condiciones11">En el caso de que alguno de los administradores de SporKeep tenga motivos para creer que estoy incumpliendo el acuerdo, o los términos y condiciones de SportKeep o cualquier límite acordado para los usuarios, reconozco el derecho del administrador para adoptar las medidas pertinentes. Por ejemplo, sin ningún tipo de restricción, la posibilidad de suspender el derecho de ingresar a la app.</string>
    <string name="condiciones12">¿Qué hacer en caso de insultos?</string>
    <string name="condiciones13">Si has recibido un insulto, toca el nombre del usuario y saldrá una ventana emergente, allí escribirás el motivo de tu reporte. Incluye detalles de la fecha, hora y tipo de insulto. Podemos aplicar las sanciones apropiadas.</string>
    <string name="condiciones14">Queremos que sepas que el equipo de SportKeep hará todo lo posible por mantener una atmosfera amistosa y saludable dentro de la app.</string>
    <string name="politica1">Al ingresar a la aplicación usted indica que conoce y entiende los siguientes puntos de la política de privacidad:</string>
    <string name="politica2">1 – El respeto a tu privacidad está totalmente garantizado.</string>
    <string name="politica3">2 – El desarrollador de la App, no Google, es el único responsable de SportKeep y su contenido.</string>
</resources>