<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="6dp">

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/cardview_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15sp">

            <ImageView
                android:adjustViewBounds="true"
                android:contentDescription="@string/cancha"
                android:id="@+id/imgEntrena"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/c2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/deporteEntrena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="Microfutbol" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="1">
                    <TableRow android:layout_marginVertical="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:text="@string/dia" />

                        <TextView
                            android:id="@+id/diaEntrena"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp" />
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:text="@string/horario" />

                        <TextView
                            android:id="@+id/horaEntrena"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>